--- a/app/src/main/res/layout/even_row_layout.xml
+++ b/app/src/main/res/layout/even_row_layout.xml
@@ -4,8 +4,8 @@
     android:id="@+id/evenRowLayout"
     android:orientation="horizontal"
     android:layout_centerHorizontal="true"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
     >
 
@@ -17,7 +17,6 @@
         android:layout_marginRight="10dp"
         android:textSize="16sp"
         />
-
 
     <View
         android:id="@+id/left"
