--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -10,6 +10,7 @@
 
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/listview"
+        android:background="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
 
